@@ -8,23 +8,26 @@ import com.books.exception.NotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
 import org.springframework.context.i18n.LocaleContextHolder;
+import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class BookServiceImpl implements BookService {
     private final BookMapper bookMapper;
     private final BookRepository bookRepository;
     private final MessageSource messageSource;
-
+    private final KafkaTemplate<String, String> kafkaTemplate;
+    private static final String TOPIC_DELETE_BOOK = "delete-book";
 
     @Autowired
-    public BookServiceImpl(BookMapper bookMapper, BookRepository bookRepository, MessageSource messageSource) {
+    public BookServiceImpl(BookMapper bookMapper, BookRepository bookRepository,
+                           MessageSource messageSource, KafkaTemplate<String, String> kafkaTemplate) {
         this.bookMapper = bookMapper;
         this.bookRepository = bookRepository;
         this.messageSource = messageSource;
+        this.kafkaTemplate = kafkaTemplate;
     }
 
     @Override
@@ -40,14 +43,22 @@ public class BookServiceImpl implements BookService {
 
     @Override
     public void delete(Integer id) {
-        bookRepository.deleteById(id);
+        Book bookToDelete = bookRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException(messageSource
+                        .getMessage("bookNotFound",null, LocaleContextHolder.getLocale())));
+        String fileId = bookToDelete.getImageId();
+        bookRepository.delete(bookToDelete);
+        if (!fileId.isEmpty()) {
+            // Отправка сообщения в Kafka с id файла в MongoDB
+            kafkaTemplate.send(TOPIC_DELETE_BOOK, bookToDelete.getImageId());
+        }
     }
 
     @Override
     public List<BookDto> getAllBooks() {
         return bookRepository.findAll().stream()
                 .map(bookMapper::convertBook)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
